# p2p-chat

./: Cargo.toml  README.md
docs/: bootstrap-nodes.md  gossip-layer.md  identity-layer.md  message-id.md  overview.md  protocol.md
docs/legacy-rough-drafts/: README.md  layers.md  message-id-brainstorm.md
docs/rough-drafts/: bootstrap-get-listings-query-n.md  peer-discovery.md
examples/p2p-chat/: Cargo.toml  README.md
examples/p2p-chat/src/: main.rs
examples/p2p-chat/src/frontend/: handle_input.rs  mod.rs  send_message.rs  state.rs
examples/p2p-chat/src/types/: ui.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
lib/protocol/: Cargo.toml
lib/protocol/src/: lib.rs
lib/protocol/src/core/: commands.rs  frames.rs  mod.rs  node_info.rs  read_stream.rs  start_pinging.rs  state.rs
lib/protocol/src/core/client/: mod.rs
lib/protocol/src/core/server/: handle_connection.rs
lib/protocol/src/core/stream/: mod.rs  ping_stream.rs  read_stream.rs  types.rs
lib/protocol/src/types/: builder.rs  mod.rs  package.rs  state.rs
lib/protocol/src/utils/: mod.rs  prng.rs  socket_addr_to_bytes.rs  sss_triangle.rs
