[workspace]
resolver = "2"
members = [
    "bin/node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
protocol = { path = "lib/protocol" }

serde = "1.0.195"
serde_json = "1.0.111"
anyhow = "1.0.79"
