[workspace]
resolver = "2"
members = [
    "examples/p2p-chat",
    "lib/protocol",
    "examples/testing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
protocol = { path = "lib/protocol" }

tokio = "1.37.0"
serde = "1.0.195"
serde_json = "1.0.111"
anyhow = "1.0.79"
